app-380.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-380-v1
  namespace: app-380
  annotations:
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: 'https://gitlab.com/ocp-demo/frontend-js'
  labels:
    app.kubernetes.io/component: app-380
    app.kubernetes.io/instance: app-380
    app.kubernetes.io/name: nodejs
    app.kubernetes.io/part-of: App-X
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: '18'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-380
      version: v1
  template:
    metadata:
      labels:
        app: app-380
        version: v1
        maistra.io/expose-route: "true"
    spec:
      containers:
      - name: app-380
        image: quay.io/voravitl/frontend-js:v1
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "0.1"
            memory: 60Mi
          limits:
            cpu: "0.2"
            memory: 100Mi
        securityContext:
          seccompProfile: #"RuntimeDefault" or "Localhost"
            type: RuntimeDefault
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          capabilities:
            drop: ["ALL"]
          readOnlyRootFilesystem: true
        ports:
        - containerPort: 8080
      terminationGracePeriodSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-380-v2
  namespace: app-380
  annotations:
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: 'https://gitlab.com/ocp-demo/frontend-js'
  labels:
    app.kubernetes.io/component: app-380
    app.kubernetes.io/instance: app-380
    app.kubernetes.io/name: nodejs
    app.kubernetes.io/part-of: App-X
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: '18'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-380
      version: v2
  template:
    metadata:
      labels:
        app: app-380
        version: v2
        maistra.io/expose-route: "true"
    spec:
      containers:
      - name: app-380
        image: quay.io/voravitl/frontend-js:v1
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "0.1"
            memory: 60Mi
          limits:
            cpu: "0.2"
            memory: 100Mi
        ports:
        - containerPort: 8080
        securityContext:
          seccompProfile: #"RuntimeDefault" or "Localhost"
            type: RuntimeDefault
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          capabilities:
            drop: ["ALL"]
          readOnlyRootFilesystem: true
      terminationGracePeriodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: app-380
  namespace: app-380
  labels:
    app: app-380
spec:
  ports:
  - port: 8080
    name: http
    targetPort: 8080
  selector:
    app: app-380
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: app-380
  namespace: app-380
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: app-380
    weight: 100
  wildcardPolicy: None
